--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 body {
   overflow-x: hidden;
-  font-family: "Roboto", sans-serif;
 }
 
 #vally {
@@ -24,6 +29,7 @@ body {
   box-shadow: 0 5px 35px rgba(0, 0, 0, 0.089);
   height: 620px;
   margin: 2rem 2rem;
+  background-color: #f2f2f2;
 }
 .single-product h3 {
   font-size: 1.3rem;
@@ -33,6 +39,7 @@ body {
   width: 150px;
   height: 150px;
   margin-bottom: 1.5rem;
+  mix-blend-mode: multiply;
 }
 
 .cart {
@@ -42,6 +49,7 @@ body {
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
+  background-color: #f2f2f2;
 }
 .cart-main {
   padding-right: 30px;
